--- a/templates/.env.j2
+++ b/templates/.env.j2
@@ -1,6 +1,6 @@
-REDMINE_DB_USERNAME={{ var.REDMINE_DB_USERNAME }}
-REDMINE_DB_PASSWORD={{ var.REDMINE_DB_PASSWORD }}
-REDMINE_DB_HOST={{ var.REDMINE_DB_HOST }}
-REDMINE_DB_PORT={{ var.REDMINE_DB_PORT }}
-REDMINE_DB_DATABASE={{ var.REDMINE_DB_DATABASE }}
-REDMINE_DB_SSLMODE={{ var.REDMINE_DB_SSLMODE }}
+REDMINE_DB_USERNAME={{ REDMINE_DB_USERNAME }}
+REDMINE_DB_PASSWORD={{ REDMINE_DB_PASSWORD }}
+REDMINE_DB_HOST={{ REDMINE_DB_HOST }}
+REDMINE_DB_PORT={{ REDMINE_DB_PORT }}
+REDMINE_DB_DATABASE={{ REDMINE_DB_DATABASE }}
+REDMINE_DB_SSLMODE={{ REDMINE_DB_SSLMODE }}
